@@ -6,6 +6,7 @@ CONFIG   = qt warn_on debug
 HEADERS = \
 	src/QGaimAccountsWindow.h \
 	src/QGaimBListWindow.h \
+	src/QGaimConnectionMeter.h \
 	src/QGaimConvButton.h \
 	src/QGaimConvWindow.h \
 	src/QGaimDebugWindow.h \
@@ -15,6 +16,7 @@ HEADERS = \
 SOURCES = \
 	src/QGaimAccountsWindow.cpp \
 	src/QGaimBListWindow.cpp \
+	src/QGaimConnectionMeter.cpp \
 	src/QGaimConvButton.cpp \
 	src/QGaimConvWindow.cpp \
 	src/QGaimDebugWindow.cpp \
